--- a/Lecture Notes/style.css
+++ b/Lecture Notes/style.css
@@ -8,3 +8,23 @@ p{
 font-family: Arial;
 font-size: 14px;
 }
+
+p.special{
+color:blue;
+font-size:20px;
+}
+
+.generic{
+color: orange;
+font-size: 30px;
+}
+
+#unique{
+color:brown;
+font-family:Helvetica;
+}
+
+.snazzy{
+font-size:10;
+font-color: yellow;
+}
