--- a/Lecture Notes/style.css
+++ b/Lecture Notes/style.css
@@ -66,6 +66,44 @@ height: auto;
 background-color: purple;
 }
 
+#nav{
+border: 1px solid black;
+height: 50px;
+width: 400px;
+background-color: green;
+margin: 0 px auto;
+}
+
+#nav ul{
+list-style-type: none;
+}
+
+#nav ul li{
+border: 1px solid black;
+width: 70px; 
+display: inline-block;
+padding: 5px;
+}
+
+#nav ul li a:link{
+text-decoration: none;
+}
+
+#nav ul li a:visited{
+text-decoration: none;
+color: blue;
+}
+
+#nav ul li a:hover{
+text-decoration: none;
+font-weight: bold;
+}
+
+#nav ul li a:active{
+text-decoration: none;
+color: red;
+}
+
 ol{
 color: #990033;
 background-color: #33FF99;
