--- a/Lecture Notes/Final Project/style.css
+++ b/Lecture Notes/Final Project/style.css
@@ -32,7 +32,7 @@ height: 300px;
 }
 
 #header #nav{
-margin-top: 80px;
+margin-top: -50px;
 margin-left: 350px;
 }
 
@@ -54,12 +54,37 @@ color: black;
 color: white;
 }
 
-#heaer #nav a:visited{
+#header #nav a:visited{
 color: white;
 }
 
 #header #nav a:active{
 color: purple;
+}
+
+#header #logo img{
+margin-top: 20px;
+margin-left: -350px;
+}
+
+#wrapper #table1{
+width: 700px;
+height: 250px;
+table-layout: fixed;
+}
+
+#wrapper #table1 td{
+background: #D8D8D8;
+font-size: 14px;
+padding: 10px;
+
+border-radius: 10px;
+-moz-border-radius: 10px;
+-webkit-border-radius: 10px;
+
+box-shadow: 0px 0px 10px #000;
+-moz-box-shadow: 0px 0px 10px #000;
+-webkit-box-shadow: 0px 0px 10px #000;
 }
 
 #footer{
