--- a/Lecture Notes/Final Project/style.css
+++ b/Lecture Notes/Final Project/style.css
@@ -7,7 +7,6 @@ font-family: Arial;
 }
 
 #header{
-border: 1px solid black;
 width: 100%;
 height: 120px;
 background: #202020;
@@ -17,18 +16,17 @@ text-align: center;
 #wrapper{
 width: 700px;
 height: auto;
-border: 1px solid black;
 margin: 0px auto;
 }
 
 #main{
-border: 1px solid black;
 height: 300px;
 }
 
 #wrapper #main img {
 width: 700px; 
 height: 300px;
+border: 1px solid gray;
 }
 
 #header #nav{
@@ -55,11 +53,11 @@ color: white;
 }
 
 #header #nav a:visited{
-color: white;
+color: black;
 }
 
 #header #nav a:active{
-color: purple;
+color: black;
 }
 
 #header #logo img{
@@ -87,9 +85,15 @@ box-shadow: 0px 0px 10px #000;
 -webkit-box-shadow: 0px 0px 10px #000;
 }
 
+#wrapper #table1 td h3{
+text-align: center;
+font-family: pristina;
+font-size: 20px;
+}
+
 #footer{
 height: 40px;
-border: 1px solid black;
+border-top: 1px solid gray;
 text-align: center;
 font-size: 14px;
 }
